[package]
name = "z99axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tower-http = { version = "0.6.4", features = ["cors"] }
dotenv = "0.15"
axum-macros = "0.5"
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }

[dependencies.sqlx]
version = "0.8.6"
features = [
    "runtime-tokio-rustls",
    "macros",
    "mysql",
    "postgres",
]
  